<resources>
    <string name="app_name">Post Tracker</string>
    <string name="add_packet">Add Packet</string>
    <string name="branch_id">Branch Id</string>
    <string name="branch_id_hint">ג123</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_name_hint">סניף דואר, אופקים</string>
    <string name="button_add">ADD</string>
    <string name="generic_branch_icon">Generic Branch Icon</string>
    <string name="placeholder_branch_name">יחידת דואר ממס - בן בן</string>
    <string name="branch_adress_placeholder">ההסתדרות 40, מיקוד: 7864118 אשקלון</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="placeholder_branch_phone_number">972-54-123123</string>
    <string name="branch_id_placeholder">0004</string>
    <string name="no_items_icon">No Items Icon</string>
    <string name="no_pending_packets">No Pending Packets</string>
    <string name="time_ago_placeholder">3 days ago</string>
    <string name="placeholder_post_id">YY511282674IL</string>
    <string name="placeholder_branch_packet_id">ג1234</string>
    <string name="invalid_dialog_input_branch">Unknown Branch</string>
    <string name="invalid_dialog_input_id">Invalid Packet Id</string>
    <string name="removed">Removed</string>
    <string name="undo">UNDO</string>
    <string name="notification_title">Israel-Post Tracker</string>
    <string name="notification_body">You\'ve got an SMS about a packet! Click for more information</string>
</resources>
