<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView android:id="@+id/postIconIMG"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:layout_centerVertical="true"
            android:src="@drawable/ic_location_city"
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/generic_branch_icon" />

        <RelativeLayout
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"

            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"

            android:id="@+id/blockTitleSubtitle"

            android:layout_toLeftOf="@+id/postIconIMG"
            android:layout_toStartOf="@+id/postIconIMG"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView android:id="@+id/branchTitleTV"
                android:textColor="@color/primaryText"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_branch_name"
                android:textSize="25sp"
                />

            <TextView android:id="@+id/branchAddressTV"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"

                android:textColor="@color/secondaryText"
                android:layout_below="@id/branchTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_adress_placeholder"
                android:textSize="13sp"
                />

            <LinearLayout android:id="@+id/branchPhoneContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/branchAddressTV"
                android:background="?android:attr/selectableItemBackground"
                android:padding="1dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <ImageView android:id="@+id/phoneIcon"

                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    android:layout_marginTop="05dp"
                    android:src="@drawable/ic_local_phone_24dp"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone_icon" />

                <TextView
                    android:id="@+id/branchPhoneNumberTV"
                    android:layout_marginTop="6dp"
                    android:text="@string/placeholder_branch_phone_number"
                    android:textSize="16sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/branchIdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"

        android:gravity="start"
        android:text="@string/branch_id_placeholder"
        android:textColor="#999"
        android:textSize="12sp"
        android:layout_alignParentLeft="true"
        />


</RelativeLayout>